# aizen

./: .gitignore  README.md  pyproject.toml
docs/: advanced.md  ai-backends.md  getting-started.md  mcp.md  plugins.md  workflows.md
src/aizen/: __init__.py  _logging.py  cli.py  config.py  engine.py  models.py  state.py  validation.py
src/aizen/ai/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py  registry.py
src/aizen/plugins/: __init__.py  example_plugin.py  hooks.py  installer.py  loader.py  registry.py
src/aizen/stages/: ai.py  base.py  mcp.py  python.py  shell.py
tests/: conftest.py  test_config.py  test_dry_run.py  test_engine.py  test_integration.py  test_logging.py  test_models.py  test_plugins.py  test_state.py  test_streaming.py  test_validation.py
