[project]
name = "aizen"
version = "0.1.0"
description = "Universal task orchestrator — DAG-based workflow engine with AI backends, plugins, and checkpointing"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
aizen = "aizen.cli:app"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
